config-repos/config-sync-app-owner/gateway-api-demo-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-gateway-api-demo-v2
  name: k8s-gateway-api-demo-v2  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-gateway-api-demo-v2
  template:
    metadata:
      labels:
        app: k8s-gateway-api-demo-v2
    spec:
      containers:
      - image: msathetech/k8s-gateway-demo@sha256:dfa7fea32685762e75726b1875b0877d84241f5387dde1a1edc374e715037776
        imagePullPolicy: Always
        name: k8s-gateway-api-demo
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-gateway-api-demo-service-v2
spec:
  selector:
    app: k8s-gateway-api-demo-v2
  ports:
  - port: 8080
    targetPort: 8080
