config-repos/config-sync-app-owner/gateway-api-demo-http-route.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: k8s-gateway-api-demo
  labels:
    gateway: external-http
spec:
  gateways:
    allow: All
  # hostnames:
  # - "store.example.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    forwardTo:
    - serviceName: k8s-gateway-api-demo-service
      port: 8080
      weight: 50
    - serviceName: k8s-gateway-api-demo-service-v2
      port: 8080
      weight: 50
  # - matches:
  #   - headers:
  #       type: Exact
  #       values:
  #         env: canary
  #   forwardTo:
  #   - serviceName: store-v2
  #     port: 8080
  # - matches:
  #   - path:
  #       type: Prefix
  #       value: /de
  #   forwardTo:
  #   - serviceName: store-german
  #     port: 8080
